/* 
  Localizable.strings
  UltimatePortfolio

  Created by Roland Lariotte on 06/12/2020.
  
*/

/* GENERAL STRINGS */

"OK" = "OK";
"Delete" = "Delete";
"Basic settings" = "Basic settings";



/* MAIN ACTIVITIES */

"Home" = "Home";
"Open" = "Open";
"Closed" = "Closed";
"Awards" = "Awards";



/* HOME VIEW */

"Up next" = "Up next";
"More to explore" = "More to explore";
"%@, %lld items, %g%% complete" = "%@, %lld items, %g%% complete.";



/* PROJECTS VIEW */

"Open Projects" = "Open Projects";
"Closed Projects" = "Closed Projects";
"Add Project" = "Add Project";
"Add New Item" = "Add New Item";
"There's nothing here right now" = "There's nothing here right now";

/* A button that shows a menu with the following options */
"Sort" = "Sort";
"Sort items" = "Sort items"; /* The title of the menu */
"Optimized" = "Optimized"; /* Sort using an optimized algorithm */
"Creation Date" = "Creation Date"; /* Sort by the date items were created */
"Title" = "Title"; /* Sort by item title */

/* Default names for a new project and a new item */
"New Project" = "New Project";
"New Item" = "New Item";

"%@, completed" = "%@, completed.";
"%@, high priority" = "%@, high priority.";

/* EDITING PROJECTS */

"Edit Project" = "Edit Project";
"Project name" = "Project name";
"Description of this project" = "Description of this project";
"Custom project color" = "Custom project color";

/* Options to close (mark as finished), open (mark as unfinished), or delete a project. */
"Close this project" = "Close this project";
"Closing a project moves it from the Open to Closed tab; deleting it removes the project entirely." = "Closing a project moves it from the Open to Closed tab; deleting it removes the project entirely.";
"Reopen this project" = "Reopen this project";
"Delete this project" = "Delete this project";
"Delete project?" = "Delete project?";
"Are you sure you want to delete this project? You will also delete all the items it contains." = "Are you sure you want to delete this project? You will also delete all the items it contains.";



/* EDITING ITEMS */

"Edit Item" = "Edit Item";
"Item name" = "Item name";
"Description" = "Description";
"Priority" = "Priority";
"Low" = "Low";
"Medium" = "Medium";
"High" = "High";

"Mark Completed" = "Mark Completed"; /* Mark this item as being completed (finished/accomplished) */



/* AWARDS */

"Locked" = "Locked";
"Unlocked: %@" = "Unlocked: %@";



/* OTHER STRINGS */

/* Shown by default when the user hasn't select a project or item */
"Please select something from the menu to begin." = "Please select something from the menu to begin.";



/* COLORS */

"Select a project color" = "Select a project color";
"Pink" = "Pink";
"Purple" = "Purple";
"Red" = "Red";
"Orange" = "Orange";
"Gold" = "Gold";
"Green" = "Green";
"Teal" = "Teal";
"Light Blue" = "Light Blue";
"Dark Blue" = "Dark Blue";
"Midnight" = "Midnight";
"Dark Gray" = "Dark Gray";
"Gray" = "Gray";
